save metrics and plots

--- a/EFRI Data Analysis LDA.ipynb
+++ b/EFRI Data Analysis LDA.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "0043744a",
    "metadata": {},
    "outputs": [],
@@ -36,9 +36,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import csv\n",
     "import mne\n",
     "from matplotlib import pyplot as plt\n",
-    "from sklearn.model_selection import RepeatedKFold, cross_validate\n",
+    "from sklearn.model_selection import cross_validate\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from scipy.stats import ttest_1samp"
    ]
@@ -54,26 +55,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "id": "2010fc45",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ncsl_share = '/run/user/1000/gvfs/smb-share:server=10.162.37.21,share=main'\n",
     "# data_path = f'Data/Subject06_snapshot_normalized.npy'\n",
-    "ncsl_share = '/mnt/ncsl_share'\n",
-    "data_path = ncsl_share + f'/Daniel/Data/Trial_by_Chan_by_Freq_by_Time_Snapshots/Subject06_snapshot_normalized.npy'\n",
-    "setup_path = ncsl_share + f'/Public/EFRI/1_formatted/SUBJECT06/EFRI06_WAR_SES1_Setup.mat'\n",
-    "raw_path = ncsl_share + f'/Public/EFRI/1_formatted/SUBJECT06/EFRI06_WAR_SES1_Raw.mat'\n",
-    "out_path_tvalues = f't_values'\n",
+    "subs = ['06']\n",
+    "file_paths = {}\n",
     "\n",
-    "raw_file = h5py.File(raw_path)\n",
-    "setup_data = mat73.loadmat(setup_path)"
+    "for sub in subs:\n",
+    "    # create a dictionary holding the file paths\n",
+    "    ncsl_share = '/mnt/ncsl_share'\n",
+    "    file_paths[sub] = {\n",
+    "        'setup_path': ncsl_share + f'/Public/EFRI/1_formatted/SUBJECT{sub}/EFRI{sub}_WAR_SES1_Setup.mat',\n",
+    "        'raw_path': ncsl_share + f'/Public/EFRI/1_formatted/SUBJECT{sub}/EFRI{sub}_WAR_SES1_Raw.mat',\n",
+    "        'data_path': ncsl_share + f'/Daniel/Data/Trial_by_Chan_by_Freq_by_Time_Snapshots/Subject{sub}_snapshot_normalized.npy',\n",
+    "        'out_path_metrics': f'Metrics/Subject{sub}',\n",
+    "        'out_path_plots': f'Plots/Subject{sub}'\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
+   "id": "3f5fd36d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_file = h5py.File(file_paths['06']['raw_path'])\n",
+    "setup_data = mat73.loadmat(file_paths['06']['setup_path'])\n",
+    "\n",
+    "out_path_plots = file_paths['06']['out_path_plots']\n",
+    "out_path_metrics = file_paths['06']['out_path_metrics']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "8f36eceb",
    "metadata": {},
    "outputs": [
@@ -83,7 +103,7 @@
        "dict_keys(['elec_area', 'elec_ind', 'elec_name', 'filters', 'trial_times', 'trial_words'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "530612d4",
    "metadata": {},
    "outputs": [],
@@ -118,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "cd25babb",
    "metadata": {},
    "outputs": [],
@@ -129,22 +149,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "22fdad73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = np.load(data_path)\n",
-    "# num_trials, num_channels, num_freqs, num_timesteps = data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "ed8d5dfb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = np.load(file_paths[0]['data_path'])\n",
     "y = np.asarray([(0 if bet == 5 else 1) for bet in bets]) # 0 = low bet ($5), 1 = high bet ($20)"
    ]
   },
@@ -161,13 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "bad1051f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_LDA_model(data, y, channel, time, time_resolution):\n",
-    "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
+    "    num_timesteps = data.shape[3]\n",
     "\n",
     "    # Checks that inputted value for time resolution is valid\n",
     "    if not(num_timesteps % time_resolution == 0):\n",
@@ -219,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "e258963f",
    "metadata": {},
    "outputs": [],
@@ -248,12 +258,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "17ffd4f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "metrics = calculate_LDA_metrics(data,y,time_resolution=2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e99ac0a8",
+   "metadata": {},
+   "source": [
+    "### Save Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "bf4e5c94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(out_path_metrics+'_LDA_metrics.csv', 'w', newline=\"\") as fp:\n",
+    "    writer = csv.DictWriter(fp, fieldnames=metrics.keys())\n",
+    "    writer.writeheader()\n",
+    "    writer.writerow(metrics)"
    ]
   },
   {
@@ -267,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "2422fc62",
    "metadata": {},
    "outputs": [],
@@ -299,17 +331,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "eb630541",
-   "metadata": {},
-   "source": [
-    "## Multiprocessing"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "id": "f357d935",
    "metadata": {},
    "outputs": [],
@@ -320,6 +343,15 @@
     "  metrics = calculate_LDA_metrics(data=data, y=y_shuffled, time_resolution=2)\n",
     "    \n",
     "  return metrics['T Stats']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "eb630541",
+   "metadata": {},
+   "source": [
+    "## Multiprocessing"
    ]
   },
   {
@@ -476,13 +508,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "id": "526d63af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_sorted_scores(metrics, best_scores_max_sorted):\n",
-    "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
+    "def plot_sorted_scores(metrics, best_scores_max_sorted, out_path):\n",
+    "    num_channels = data.shape[1]\n",
     "    \n",
     "    fig, axs = plt.subplots(3, 1, figsize=(24, 18))\n",
     "\n",
@@ -503,24 +535,24 @@
     "    time = best_scores_max_sorted[:,1]/(20/metrics['Time Resolution']) -3\n",
     "    axs[2].scatter(np.arange(0, num_channels), time)\n",
     "    \n",
-    "    plt.savefig('accuracy_plots/sorted_accuracies.png')\n",
+    "    plt.savefig(out_path + f'_sorted_scores')\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "id": "7903e6e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plots the model accuracy as a function of time for the top performing channels, number of plots specified by \"num_plots\"\n",
-    "def plot_sorted_scores_per_channel(num_plots, metrics, best_scores_max_sorted):\n",
-    "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
+    "def plot_sorted_scores_per_channel(metrics, best_scores_max_sorted, num_plots, out_path):\n",
+    "    num_timesteps = data.shape[3]\n",
     "\n",
     "    time_resolution = metrics['Time Resolution']\n",
     "    rescaled_timesteps = int(num_timesteps/time_resolution)\n",
-    "    times = (np.arange(0, rescaled_timesteps, 1) / (20/time_resolution)) - 3 # time 0 seconds denotes when the subject starts moving \n",
+    "    times = (np.arange(0, rescaled_timesteps, 1) / (20/time_resolution)) - 3 # time 0 seconds denotes when the subject starts moving (i.e. 3 seconds into the data)\n",
     "\n",
     "    fig, axs = plt.subplots(num_plots, 1, figsize=(24, 6 * num_plots))\n",
     "    \n",
@@ -535,19 +567,19 @@
     "        ax.axvspan(time - .0025 ,time + .0025, color = 'red', alpha=0.5)\n",
     "        ax.annotate(f'(Time: {time:.2f}s, Score: {peak_accuracy:.2f})', xy=(time + .05 ,.6))\n",
     "    \n",
-    "    plt.savefig('accuracy_plots/accuracies_line.png')\n",
+    "    plt.savefig(out_path + f'_sorted_scores_per_channel')\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "id": "a3405726",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_power_heatmap(data, num_plots, metrics, best_scores_max_sorted):\n",
-    "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
+    "def plot_power_heatmap(data, metrics, best_scores_max_sorted, num_plots, out_path):\n",
+    "    num_freqs, num_timesteps = data.shape[2:]\n",
     "    time_resolution = metrics['Time Resolution']\n",
     "    rescaled_timesteps = int(num_timesteps/time_resolution)\n",
     "\n",
@@ -584,20 +616,20 @@
     "            ax.set_yticks(yticks)\n",
     "            ax.set_yticklabels(yticklabels)\n",
     "            ax.set(xlabel=\"Trial Indices\", ylabel=\"Frequency (Hz)\")\n",
-    "\n",
-    "        # TODO: Add line graph on top of heatmap\n",
-    "        # sns.lineplot(x=np.arange(0,100), y=t_stats[0])"
+    "        \n",
+    "        plt.savefig(out_path + f'_heatmap_{i}')\n",
+    "        plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "id": "45911369",
    "metadata": {},
    "outputs": [],
    "source": [
     "def sort_scores(data, metrics):\n",
-    "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
+    "    num_channels = data.shape[1]\n",
     "    best_scores_max = np.zeros((num_channels,3))\n",
     "\n",
     "    for channel in range(num_channels):\n",
@@ -616,23 +648,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "id": "090a77da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_scores(data, metrics):\n",
+    "def plot_scores(data, metrics, out_path_plots):    \n",
     "    best_scores_max_sorted, elec_names_sorted, elec_areas_sorted = sort_scores(data, metrics)\n",
-    "    plot_sorted_scores(metrics, best_scores_max_sorted)\n",
-    "    plot_sorted_scores_per_channel(10, metrics, best_scores_max_sorted)\n",
-    "    plot_power_heatmap(data, 10, metrics, best_scores_max_sorted)\n",
-    "\n",
-    "    return (elec_names_sorted, elec_areas_sorted)"
+    "    plot_sorted_scores(metrics, best_scores_max_sorted, out_path_plots)\n",
+    "    plot_sorted_scores_per_channel(metrics, best_scores_max_sorted, 10, out_path_plots)\n",
+    "    plot_power_heatmap(data, metrics, best_scores_max_sorted, 10, out_path_plots)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "id": "aa90da56",
    "metadata": {},
    "outputs": [
@@ -758,96 +788,45 @@
     }
    ],
    "source": [
-    "elec_sorted = plot_scores(data, metrics)"
+    "plot_scores(data, metrics, out_path_plots)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "id": "9e29ec79",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([\"C'10\", \"C'8\", \"F'6\", \"F'7\", \"U'9\", \"D'7\", \"U'2\", \"S'10\", \"C'6\",\n",
-       "        \"I'5\", \"I'9\", \"B'1\", \"E'3\", \"B'2\", \"O'9\", \"X'8\", \"B'4\", \"F'3\",\n",
-       "        \"F'1\", \"F'4\", \"D'1\", \"E'7\", \"P'2\", \"P'3\", \"P'1\", \"D'3\", \"E'6\",\n",
-       "        \"M'4\", \"E'2\", \"E'1\", \"O'5\", \"F'8\", \"R'8\", \"O'10\", \"F'5\", \"M'8\",\n",
-       "        \"I'10\", \"I'1\", \"I'8\", \"R'9\", \"D'5\", \"I'4\", \"U'7\", \"C'9\", \"U'4\",\n",
-       "        \"U'1\", \"B'3\", \"S'4\", \"X'6\", \"B'6\", \"B'7\", \"C'1\", \"S'8\", \"X'3\",\n",
-       "        \"X'2\", \"S'9\", \"B'9\", \"D'9\", \"U'10\", \"F'2\", \"B'8\", \"I'6\", \"D'4\",\n",
-       "        \"C'5\", \"D'6\", \"F'10\", \"C'4\", \"C'3\", \"C'2\", \"E'4\", \"E'5\", \"E'9\",\n",
-       "        \"E'10\", \"D'2\", \"D'10\", \"D'8\", \"F'9\", \"B'10\", \"I'3\", \"S'3\", \"P'7\",\n",
-       "        \"P'5\", \"R'4\", \"R'2\", \"S'7\", \"S'6\", \"S'2\", \"O'1\", \"U'8\", \"U'5\",\n",
-       "        \"X'10\", \"X'7\", \"X'1\", 'REF1', \"P'8\", \"R'10\", \"O'2\", \"M'3\", \"I'2\",\n",
-       "        \"M'10\", \"M'9\", \"M'7\", \"M'6\", \"M'5\", 'REF2', \"M'2\", \"O'3\", \"R'7\",\n",
-       "        \"O'6\", \"P'9\", \"X'4\", \"X'5\", \"B'5\", \"E'8\", \"X'9\", \"O'4\", \"U'3\",\n",
-       "        \"P'6\", \"U'6\", \"C'7\", \"R'6\", \"S'1\", \"P'4\", \"I'7\", \"S'5\", \"P'10\",\n",
-       "        \"M'1\", \"R'1\", \"O'8\", \"R'3\", \"O'7\", \"R'5\", 'E'], dtype='<U4'),\n",
-       " array(['middle temporal gyrus L', 'middle temporal gyrus L',\n",
-       "        'inferior temporal gyrus L', 'inferior temporal gyrus L',\n",
-       "        'superior temporal gyrus (planum temporale) L',\n",
-       "        'superior temporal gyrus (planum temporale) L', 'white matter',\n",
-       "        'out', 'white matter', 'white matter', 'middle temporal gyrus L',\n",
-       "        'hippocampus (anterior) L', 'entorhinal cortex L',\n",
-       "        'hippocampus (anterior) L', 'occipital gyrus (lateral) L',\n",
-       "        'white matter', 'fusiform gyrus L', 'white matter',\n",
-       "        'fusiform gyrus L', 'white matter', 'white matter', 'white matter',\n",
-       "        'precuneus L', 'white matter', 'precuneus L',\n",
-       "        'superior temporal sulcus L', 'fusiform gyrus L',\n",
-       "        'superior frontal gyrus L', 'entorhinal cortex L',\n",
-       "        'entorhinal cortex L', 'white matter', 'inferior temporal gyrus L',\n",
-       "        'cerebrospinal fluid', 'occipital gyrus (lateral) L',\n",
-       "        'fusiform gyrus L', 'middle frontal gyrus L', 'out',\n",
-       "        'temporal pole L', 'middle temporal gyrus L',\n",
-       "        'cerebrospinal fluid',\n",
-       "        'superior temporal gyrus (planum temporale) L', 'white matter',\n",
-       "        'white matter', 'middle temporal gyrus L', 'white matter',\n",
-       "        'white matter', 'white matter', 'parietal operculum L',\n",
-       "        'white matter', 'white matter', 'white matter',\n",
-       "        'hippocampus (posterior) L', 'out', 'parietooccipital sulcus L',\n",
-       "        'cingulate cortex (posterior) L', 'out', 'middle temporal gyrus L',\n",
-       "        'out', 'superior temporal gyrus (planum temporale) L',\n",
-       "        'fusiform gyrus L', 'middle temporal gyrus L',\n",
-       "        'inferior temporal gyrus L', 'superior temporal sulcus L',\n",
-       "        'white matter', 'superior temporal gyrus (planum temporale) L',\n",
-       "        'out', 'white matter', 'hippocampus (posterior) L',\n",
-       "        'hippocampus (posterior) L', 'fusiform gyrus L',\n",
-       "        'fusiform gyrus L', 'inferior temporal gyrus L',\n",
-       "        'inferior temporal gyrus L', 'superior temporal sulcus L', 'out',\n",
-       "        'out', 'inferior temporal gyrus L', 'middle temporal gyrus L',\n",
-       "        'white matter', 'parietal operculum L',\n",
-       "        'inferior parietal lobule L', 'superior parietal lobule L',\n",
-       "        'insular cortex (posterior) L', 'white matter', 'out',\n",
-       "        'postcentral gyrus L', 'parietal operculum L', 'lingula gyrus L',\n",
-       "        'white matter', 'white matter', 'supramarginal gyrus L',\n",
-       "        'white matter', 'cingulate cortex (posterior) L', 'FZ',\n",
-       "        'inferior parietal lobule L', 'cerebrospinal fluid',\n",
-       "        'lingula gyrus L', 'white matter', 'temporal pole L', 'out', 'out',\n",
-       "        'middle frontal gyrus L', 'middle frontal gyrus L',\n",
-       "        'middle frontal gyrus L', 'CZ',\n",
-       "        'superior frontal gyrus (mesial surface) L', 'white matter',\n",
-       "        'parietal operculum L', 'white matter',\n",
-       "        'inferior parietal lobule L', 'white matter', 'white matter',\n",
-       "        'fusiform gyrus L', 'inferior temporal gyrus L',\n",
-       "        'supramarginal gyrus L', 'white matter', 'white matter',\n",
-       "        'intraparietal sulcus L', 'white matter', 'white matter',\n",
-       "        'parietal operculum L', 'parietal operculum L',\n",
-       "        'superior parietal lobule L', 'middle temporal gyrus L',\n",
-       "        'parietal operculum L', 'out',\n",
-       "        'superior frontal gyrus (mesial surface) L', 'white matter',\n",
-       "        'occipital gyrus (lateral) L', 'insular cortex (posterior) L',\n",
-       "        'white matter', 'parietal operculum L', 'PZ'], dtype='<U44'))"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "elec_sorted\n"
+    "best_scores_max_sorted, elec_names_sorted, elec_areas_sorted = sort_scores(data,metrics)\n",
+    "\n",
+    "sorted_scores = {\n",
+    "    'Sorted Max Scores' : best_scores_max_sorted,\n",
+    "    'Sorted Electrode Names' : elec_names_sorted,\n",
+    "    'Sorted Electrode Areas' : elec_areas_sorted\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c723e53f",
+   "metadata": {},
+   "source": [
+    "### Save Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "639140b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(out_path_metrics+'_sorted_scores.csv', 'w', newline=\"\") as fp:\n",
+    "    writer = csv.DictWriter(fp, fieldnames=sorted_scores.keys())\n",
+    "    writer.writeheader()\n",
+    "    writer.writerow(sorted_scores)"
    ]
   },
   {
