create file path dictionary and save metrics/plots

--- a/EFRI Data Analysis LDA.ipynb
+++ b/EFRI Data Analysis LDA.ipynb
@@ -188,8 +188,8 @@
     "    low_bet_avg_power = X[np.where(y == 0), :][0]\n",
     "    high_bet_avg_power = X[np.where(y == 1), :][0] \n",
     "\n",
-    "    # # Using RepeatedKFold() for training LDA, but this method does not produce reproducible results!\n",
-    "    # rkf = RepeatedKFold(n_splits=5, n_repeats=1)\n",
+    "    # # Using RepeatedKFold() for training LDA, but this method does not produce reproducible results! Could possibly average the test scores from all the 5 estimators\n",
+    "    # rkf = RepeatedKFold(n_splits=5, n_repeats=10)\n",
     "\n",
     "    # estimators = []\n",
     "    # scores = []\n",
@@ -202,16 +202,16 @@
     "\n",
     "    # Using cross_validate() function for training LDA\n",
     "    lda = LinearDiscriminantAnalysis(solver='lsqr', shrinkage='auto')\n",
-    "    cv_results = cross_validate(lda, X, y, cv = 5, return_estimator=True)\n",
+    "    cv_results = cross_validate(lda, X, y, cv = 5, return_estimator=True) # Possibly pass in a CVSplitter into the cv argument, possibly pass in rkf (?)\n",
     "\n",
     "    estimators = cv_results['estimator']\n",
     "    scores = cv_results['test_score']\n",
     "\n",
-    "    best_score = max(scores)\n",
+    "    best_score = max(scores) # Possibly change to calculate the average of the estimator predictions\n",
     "    best_index = list(scores).index(best_score)\n",
     "    best_lda = estimators[best_index] # select the best performing model after cross-validation\n",
     "\n",
-    "    dval = np.dot(X, best_lda.coef_.T).T[0] + best_lda.intercept_ # calculate decision value \n",
+    "    dval = np.dot(X, best_lda.coef_.T).T[0] + best_lda.intercept_ # calculate decision value (!!! mixing training and testing data sets when calculating tval), ensure that every index is only in the test set once\n",
     "\n",
     "    t_stat = ttest_1samp(dval, popmean=0).statistic # perform 1-sided t-test on decision values corresponding to high bet\n",
     "    return best_score, dval, t_stat, low_bet_avg_power, high_bet_avg_power"
@@ -264,6 +264,36 @@
    "outputs": [],
    "source": [
     "metrics = calculate_LDA_metrics(data,y,time_resolution=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "258c725a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.7027027 , 0.56756757, 0.67567568, 0.72972973, 0.67567568,\n",
+       "       0.62162162, 0.62162162, 0.54054054, 0.67567568, 0.51351351,\n",
+       "       0.51351351, 0.67567568, 0.54054054, 0.54054054, 0.7027027 ,\n",
+       "       0.64864865, 0.7027027 , 0.62162162, 0.59459459, 0.7027027 ,\n",
+       "       0.67567568, 0.62162162, 0.59459459, 0.59459459, 0.64864865,\n",
+       "       0.62162162, 0.62162162, 0.72972973, 0.62162162, 0.62162162,\n",
+       "       0.59459459, 0.7027027 , 0.54054054, 0.7027027 , 0.62162162,\n",
+       "       0.62162162, 0.54054054, 0.62162162, 0.7027027 , 0.62162162,\n",
+       "       0.56756757, 0.62162162, 0.54054054, 0.7027027 , 0.62162162,\n",
+       "       0.56756757, 0.54054054, 0.51351351, 0.62162162, 0.67567568])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics['Best Scores'][:][0]"
    ]
   },
   {
@@ -523,6 +553,7 @@
     "    axs[0].set_xlabel('Channels (from most to least accurate)')\n",
     "    axs[0].plot(best_scores_max_sorted[:,2])\n",
     "\n",
+    "    ## Change to a Horizontal bar plot\n",
     "    axs[1].set_title('Sorted Peak Score of LDA Models (from greatest to least)')\n",
     "    axs[1].set_ylabel('Peak Accuracy')\n",
     "    axs[1].set_xlabel('Channels (from most to least accurate)')\n",
