--- a/EFRI Data Analysis LDA.ipynb
+++ b/EFRI Data Analysis LDA.ipynb
@@ -217,7 +217,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_LDA_model(data, y, channel, time, time_resolution):\n",
+    "def train_LDA_model(data, y, channel:int, time:int, time_resolution:int):\n",
+    "    \"\"\"\n",
+    "    Trains several LDA models (via cross-validation) at a specific channel and time point. Averages the values of the feature vector across a time window of length specified by time_resolution.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data : arr, required \n",
+    "        The data that the LDA model is to be trained on\n",
+    "    \n",
+    "    y : arr, required\n",
+    "        The labels that the LDA model is to be trained on\n",
+    "    \n",
+    "    channel : int, required\n",
+    "        The particular channel from the data that the LDA model is to be trained on\n",
+    "    \n",
+    "    time : int, required\n",
+    "        The particular timepoint from the data that the LDA model is to be trained on\n",
+    "    \n",
+    "    time_resolution : int, required\n",
+    "        The length of the time window that the feature vector is to be averaged across\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    mean_score : float\n",
+    "        The mean score of the LDA estimators after cross-validation\n",
+    "    \n",
+    "    std_score : float\n",
+    "        The standard deviation of the scores of the LDA estimators after cross-validation\n",
+    "    \n",
+    "    dval : arr\n",
+    "        The decision values of the LDA estimators when evaluated on their respective test sets\n",
+    "    \n",
+    "    t_stat : float\n",
+    "        The t-statistic of the decision values, with the null hypothesis being that the population mean is zero\n",
+    "    \n",
+    "    low_bet_avg_power : arr\n",
+    "        The average value at each frequency for all trials with a low bet\n",
+    "\n",
+    "    high_bet_avg_power : arr\n",
+    "        The average value at each frequency for all trials with a high bet\n",
+    "\n",
+    "    diff_avg_power : arr\n",
+    "        The difference in the average values at each frequency for high and low bets\n",
+    "\n",
+    "    lda_coeff : arr\n",
+    "        The coefficients of the LDA estimator with the highest score \n",
+    "    \"\"\"\n",
+    "\n",
     "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
     "\n",
     "    # Checks that inputted value for time resolution is valid\n",
@@ -281,6 +328,27 @@
    "outputs": [],
    "source": [
     "def calculate_LDA_metrics(data, y, time_resolution):\n",
+    "    \"\"\"\n",
+    "    Calculates the LDA metrics for each channel and timepoint\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data : arr, required \n",
+    "        The data that the LDA model is to be trained on\n",
+    "    \n",
+    "    y : arr, required\n",
+    "        The labels that the LDA model is to be trained on\n",
+    "\n",
+    "    time_resolution : int, required\n",
+    "        The length of the time window that the feature vector is to be averaged across\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    metrics : dict\n",
+    "        A dictionary containing the mean scores, standard deviation of scores, decision values, t statistics, \n",
+    "        low and high bet average powers, difference in the high and low bet average powers, LDA coefficients, and time resolution that the LDA was trained on \n",
+    "    \"\"\"\n",
+    "\n",
     "    # Code to train LDA model for all channels and timepoints for Subject 6\n",
     "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
     "    rescaled_timesteps = int(num_timesteps/time_resolution)\n",
@@ -356,6 +424,20 @@
     "# Returns an array with shuffled y-values, ensures that high bet ratio is consistent with thay expected for the particular card value\n",
     "\n",
     "def shuffle_y(y):\n",
+    "    \"\"\"\n",
+    "    Randomly shuffle the elements of y to be in different locations.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "        y : arr, required\n",
+    "    The labels that the LDA model is to be trained on\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "        y_shuffled : arr\n",
+    "    An array with the elements of y randomly shuffled to be in different locations.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    np.random.seed()\n",
     "    # Get the locations for each particular card value\n",
     "    card_value_indices = []\n",
@@ -387,7 +469,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_shuffled_t_stats(data, y, time_resolution):\n",
+    "def get_shuffled_t_stats(data, y, time_resolution:int):\n",
+    "  \"\"\"\n",
+    "  Shuffles the y-labels, trains an LDA model on the data and shuffled y-labels, and returns the t-stats of the decision value of the LDA model\n",
+    "\n",
+    "  Parameters\n",
+    "  ----------\n",
+    "  data : arr, required\n",
+    "    The data the LDA model is to be trained on\n",
+    "\n",
+    "  y : arr, required\n",
+    "    The labels that the LDA model is to be trained on\n",
+    "\n",
+    "  time_resolution : int, required\n",
+    "    The number of timesteps for the time window to be computed by\n",
+    "  \n",
+    "  Returns\n",
+    "  -------\n",
+    "  metrics['T Stats] : arr\n",
+    "    An array of t-stats computed from the decision value of the LDA model for each channel/timepoint\n",
+    "  \"\"\"\n",
     "  y_shuffled = shuffle_y(y)\n",
     "  metrics = calculate_LDA_metrics(data=data, y=y_shuffled, time_resolution=time_resolution)\n",
     "    \n",
@@ -522,12 +623,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 88,
    "id": "45911369",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sort_scores(data, metrics, elec_names, elec_areas, filter_channels:bool):\n",
+    "def sort_scores(data, metrics:dict, elec_names, elec_areas, filter_channels:bool):\n",
+    "    \"\"\"\n",
+    "    Sorts the channels (highest to lowest) by their peak LDA model score\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data : arr, required \n",
+    "        The data that the model was trained on\n",
+    "    \n",
+    "    metrics : dict, required\n",
+    "        The dictionary containing the metrics of the LDA model\n",
+    "    \n",
+    "    elec_names : arr, required\n",
+    "        The names of the electrodes corresponding to the data\n",
+    "    \n",
+    "    elec_areas : arr, required \n",
+    "        The areas of the electrodes corresponding to the data\n",
+    "    \n",
+    "    filter_channels : bool, rquired\n",
+    "        Whether or not to filter out selected channels \n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    mean_scores_max_sorted : arr\n",
+    "        An array of sorted LDA scores (highest to lowest) with their respective channels and timepoints\n",
+    "    \n",
+    "    elec_names_sorted : arr\n",
+    "        An array of sorted electrode names corresponding to their respective LDA scores\n",
+    "\n",
+    "    elec_areas_sorted : arr\n",
+    "        An array of sorted electrode areas corresponding to their respective LDA scores  \n",
+    "    \"\"\"\n",
+    "\n",
     "    num_channels = data.shape[1]\n",
     "    mean_scores_max = np.zeros((num_channels,3))\n",
     "\n",
@@ -559,7 +692,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_sorted_scores(metrics, mean_scores_max_sorted, elec_areas, out_path:str):\n",
+    "def plot_sorted_scores(metrics:dict, mean_scores_max_sorted, elec_areas, out_path:str):\n",
+    "    \"\"\"\n",
+    "    Plots all the peak LDA model scores (sorted from highest to lowest) for each channel\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    metrics : dict, required\n",
+    "        The dictionary containing the metrics of the LDA model\n",
+    "    \n",
+    "    mean_scores_max_sorted : arr, required\n",
+    "        Array of sorted max scores of LDA model\n",
+    "    \n",
+    "    elec_areas : arr, required \n",
+    "        The areas of the electrodes corresponding to the data\n",
+    "    \n",
+    "    out_path : str, rquired\n",
+    "        The file path the plots are saved to\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
     "    num_channels = len(mean_scores_max_sorted)\n",
     "    \n",
     "    fig, axs = plt.subplots(3, 1, figsize=(24,18), gridspec_kw={'height_ratios' : [1,1,1]})\n",
@@ -648,19 +800,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "id": "7903e6e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plots the model accuracy as a function of time for the top performing channels, number of plots specified by \"num_plots\"\n",
-    "def plot_sorted_scores_per_channel(data, metrics, mean_scores_max_sorted, num_plots:int, elec_names, elec_areas, out_path:str):\n",
+    "def plot_sorted_scores_per_channel(data, metrics:dict, mean_scores_max_sorted, num_plots:int, elec_names, elec_areas, out_path:str):\n",
     "    \"\"\"\n",
-    "    Plots the score over time of channels sorted by highest to lowest peak score. The time of the peak score is also annotated.\n",
+    "    Plots the LDA score over time for each channel (sorted by highest to lowest peak score). The time of the peak score for each channel is also annotated.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
+    "    data : arr, required \n",
+    "        The data that the model was trained on\n",
     "    \n",
+    "    metrics : dict, required\n",
+    "        The dictionary containing the metrics of the LDA model\n",
+    "    \n",
+    "    mean_scores_max_sorted : arr, required\n",
+    "        Array of sorted max scores of LDA model\n",
+    "    \n",
+    "    num_plots : int, requried\n",
+    "        The number of channels to plot\n",
+    "    \n",
+    "    elec_names : arr, required\n",
+    "        The names of the electrodes corresponding to the data\n",
+    "    \n",
+    "    elec_areas : arr, required \n",
+    "        The areas of the electrodes corresponding to the data\n",
+    "    \n",
+    "    out_path : str, rquired\n",
+    "        The file path the plots are saved to\n",
     "    \"\"\"\n",
     "\n",
     "\n",
@@ -694,7 +865,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_power_heatmap(data, metrics, plot_metric, mean_scores_max_sorted, num_plots:int, elec_names, elec_areas, out_path:str):\n",
+    "def plot_power_heatmap(data, metrics:dict, plot_metric, mean_scores_max_sorted, num_plots:int, elec_names, elec_areas, out_path:str):\n",
     "    \"\"\"\n",
     "    Plot the heatmaps showing the metrics of the LDA models\n",
     "\n",
@@ -723,10 +894,6 @@
     "    \n",
     "    out_path : str, rquired\n",
     "        The file path the heatmaps are saved to\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    n/a\n",
     "    \"\"\"\n",
     "\n",
     "    num_freqs, num_timesteps = data.shape[2:]\n",
@@ -812,16 +979,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
    "id": "090a77da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_scores(data, metrics, elec_names, elec_areas, num_channels = 10, filter_channels = False, out_path_plots = None):    \n",
+    "def plot_scores(data, metrics:dict, elec_names, elec_areas, num_plots:int = 10, filter_channels:bool = False, out_path_plots:str = None):\n",
+    "    \"\"\"\n",
+    "    Plot the heatmaps and line graphs showing the metrics of the LDA models\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data : arr, required \n",
+    "        The data that the model was trained on\n",
+    "    \n",
+    "    metrics : dict, required\n",
+    "        The dictionary containing the metrics of the LDA model\n",
+    "    \n",
+    "    elec_names : arr, required\n",
+    "        The names of the electrodes corresponding to the data\n",
+    "    \n",
+    "    elec_areas : arr, required \n",
+    "        The areas of the electrodes corresponding to the data\n",
+    "\n",
+    "    num_plots : int, requried\n",
+    "        The number of channels to plot\n",
+    "\n",
+    "    filter_channels : bool, required\n",
+    "        Whether or not to filter out selected channels \n",
+    "    \n",
+    "    out_path_plots : str, required\n",
+    "        The file path the plots are saved to\n",
+    "    \"\"\"\n",
+    "    \n",
     "    mean_scores_max_sorted, elec_names_sorted, elec_areas_sorted = sort_scores(data, metrics, elec_names, elec_areas, filter_channels)\n",
     "    plot_sorted_scores(metrics, mean_scores_max_sorted, elec_areas_sorted, out_path_plots)\n",
-    "    plot_sorted_scores_per_channel(data, metrics, mean_scores_max_sorted, num_channels, elec_names_sorted, elec_areas_sorted, out_path_plots)\n",
-    "    plot_power_heatmap(data, metrics, np.abs(t_stats), mean_scores_max_sorted, num_channels, elec_names_sorted, elec_areas_sorted, out_path_plots)"
+    "    plot_sorted_scores_per_channel(data, metrics, mean_scores_max_sorted, num_plots, elec_names_sorted, elec_areas_sorted, out_path_plots)\n",
+    "    plot_power_heatmap(data, metrics, np.abs(t_stats), mean_scores_max_sorted, num_plots, elec_names_sorted, elec_areas_sorted, out_path_plots)"
    ]
   },
   {
@@ -962,7 +1156,7 @@
     }
    ],
    "source": [
-    "plot_scores(f_band_data, metrics, elec_names, elec_areas, num_channels= 10, filter_channels=True, out_path_plots=out_path_plots)"
+    "plot_scores(f_band_data, metrics, elec_names, elec_areas, num_plots= 10, filter_channels=True, out_path_plots=out_path_plots)"
    ]
   },
   {
