seperate prototype and presentable notebooks

--- a/[Prototype] EFRI Data Analysis LDA.ipynb
+++ b/[Prototype] EFRI Data Analysis LDA.ipynb
@@ -48,7 +48,10 @@
     "from matplotlib import pyplot as plt\n",
     "from sklearn.model_selection import RepeatedKFold, cross_validate\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-    "from scipy.stats import ttest_1samp, ttest_ind"
+    "from scipy.stats import ttest_1samp, ttest_ind\n",
+    "\n",
+    "from LDA import LDA\n",
+    "from PlotLDAMetrics import PlotLDAMetrics"
    ]
   },
   {
